--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -13,9 +13,9 @@
           <img [src]="profile.picture" />
         </button>
         <div ngbDropdownMenu aria-labelledby="profileLink">
-          <button class="dropdown-item">
-            <i class="fa fa-fw fa-cog" aria-hidden="true"></i>
-            Action 1
+          <button class="dropdown-item" (click)="goTo('profile')">
+            <i class="fa fa-fw fa-user-o" aria-hidden="true"></i>
+            Profile
           </button>
           <button class="dropdown-item" (click)="logout()">
             <i class="fa fa-fw fa-sign-out" aria-hidden="true"></i>
