--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,10 @@ ngb-typeahead-window {
   color: grey;
 }
 
+.dark-grey {
+  color: rgb(100,100,100);
+}
+
 .google,
 .hover-google:hover {
   color: $google;
