feat: add homeURI in header

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="title"><a class="skilful-buddies" [routerLink]="['']">Skilful Buddies</a></h1>
+  <h1 class="title"><a class="skilful-buddies" [routerLink]="[homeURI]">Skilful Buddies</a></h1>
   <div class="pinned-right">
     <span class="block">
       <template-notification [type]="'user'" [notifications]="getUsersNotifications()"></template-notification>
