--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -17,7 +17,9 @@
         </div>
         <div class="under">
           <div class="under-left">
-            <h1>{{profile.name}}</h1>
+            <h1>
+              <inline-editor type="text" [(ngModel)]="profile.name" (onSave)="editField('name', $event)" name="editName" size="40"></inline-editor>
+            </h1>
             <p>
               <i class="fa fa-fw fa-cogs" aria-hidden="true"></i>
               skills
@@ -62,6 +64,7 @@
     </div>
 
     <div class="row">
+
     </div>
   </div>
 </div>
