feat: add edition functions

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -10,21 +10,26 @@
           <agm-map *ngIf="profile.place" [latitude]="profile.place.latitude" [longitude]="profile.place.longitude" [zoom]="14" [streetViewControl]="false" [zoomControl]="false" [mapTypeId]="'terrain'">
             <agm-snazzy-info-window [isOpen]="true" [latitude]="profile.place.latitude" [longitude]="profile.place.longitude" [closeOnMapClick]="false" [showCloseButton]="false" [backgroundColor]="'rgba(255,69,0,0.7)'" [borderRadius]="'10px'">
               <ng-template>
-                Palo Alto, CA
+                <div class="text-center">
+                  {{givenAddress}}
+                </div>
+                <button class="btn btn-link edit" (click)="openModal(addressModal)" *ngIf="editable">
+                  <a class="fa fa-pencil" aria-hidden="true"></a>
+                </button>
               </ng-template>
             </agm-snazzy-info-window>
           </agm-map>
         </div>
         <div class="under">
           <div class="under-left">
-            <h1>
-              <inline-editor type="text" [(ngModel)]="profile.name" (onSave)="editField('name', $event)" name="editName" size="40"></inline-editor>
+            <h1 [innerHTML]="profile.name" *ngIf="!editable"></h1>
+            <h1 *ngIf="editable">
+              <inline-editor type="text" [(ngModel)]="profile.name" (onSave)="editField('name', $event)" name="editName" size="40" [disabled]="!editable"></inline-editor>
             </h1>
             <p>
               <i class="fa fa-fw fa-cogs" aria-hidden="true"></i>
               skills
-              <span class="badge badge-warning">developer</span>
-              <span class="badge badge-warning">full-stack</span>
+              <span [innerHTML]="text | badge"></span>
             </p>
           </div>
           <div class="under-right">
@@ -63,8 +68,26 @@
       </div>
     </div>
 
-    <div class="row">
-
+    <div class="row" *ngIf="profile">
+      {{profile.place.latitude}} x {{profile.place.longitude}}
     </div>
   </div>
 </div>
+
+<ng-template #addressModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Fill in your address</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <input type="text" class="form-control" [(ngModel)]="profile.place.address" (change)="editAddress(profile.place.address, addressModal)" />
+    <p class="text-muted text-center mt-1">
+      Your address will never be shown to the public. People will only the city you're in.
+    </p>
+  </div>
+  <!-- <div class="modal-footer">
+    <button type="button" class="btn btn-outline-light" (click)="c('Close click')">Close</button>
+  </div> -->
+</ng-template>
