--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -79,6 +79,11 @@
   }
 }
 
+h1 {
+  font-size: 1.5em;
+  line-height: 2;
+}
+
 .header-right {
   position: absolute;
   top: 0;
@@ -104,12 +109,6 @@
       font-weight: bold;
     }
   }
-}
-
-.profile-card {
-  box-shadow: 0 0 1px rgba(0,0,0,0.4);
-  background-color: white;
-  border-radius: 5px;
 }
 
 .edit {
