--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -65,16 +65,34 @@
       padding-right: 201px;
       height: 90px;
       padding: 5px;
+      .fa {
+        color: orangered;
+      }
     }
     .under-right {
       position: absolute;
       top: 0;
       right: 0;
       height: 90px;
-      width: 200px;
+      width: 150px;
       background-color: rgb(250,250,250);
       border-left: solid 1px silver;
       text-align: center;
+    }
+    .buttons {
+      position: absolute;
+      top: 3px;
+      right: 155px;
+      button {
+        display: block;
+        width: 130px;
+        margin: 3px;
+        text-align: left;
+        cursor: pointer;
+        .fa {
+          color: orangered;
+        }
+      }
     }
   }
 }
