--- a/src/app/templates/card-skill/card-skill.component.html
+++ b/src/app/templates/card-skill/card-skill.component.html
@@ -12,9 +12,9 @@
       </span>
     </p>
   </div>
-  <p class="content">
-    {{skill.content}}
-  </p>
+  <div class="content">
+    <markdown [data]="skill.content"></markdown>
+  </div>
   <div class="footer">
     <div class="row">
       <div class="col text-center">
