--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,5 +1,5 @@
 <template-header [active]="'profile'" class="top"></template-header>
-<div class="above">
+<div class="profile-above">
   <div class="container">
     <div class="header" *ngIf="profile">
       <div class="header-left">
@@ -24,21 +24,34 @@
           <div class="under-left">
             <h1 [innerHTML]="profile.name" *ngIf="!editable"></h1>
             <h1 *ngIf="editable">
-              <inline-editor type="text" [(ngModel)]="profile.name" (onSave)="editField('name', $event)" name="editName" size="40" [disabled]="!editable"></inline-editor>
+              <inline-editor type="text" [(ngModel)]="profile.name" (onSave)="editField('name', $event)" name="editName" size="40"></inline-editor>
             </h1>
             <p class="text-muted">
-              <span class="mr-1">
+              <span class="mr-1" *ngIf="!editable">
                 <i class="fa fa-fw fa-heartbeat" aria-hidden="true"></i>
-                26 years old
+                {{profile.age | age}}
               </span>
-              <span class="ml-1">
+              <span class="mr-1" *ngIf="editable">
+                <i class="fa fa-fw fa-heartbeat" aria-hidden="true"></i>
+                <inline-editor type="text" [(ngModel)]="profile.age" (onSave)="editField('age', $event)" name="editAge" placeholder="age" size="4"></inline-editor>
+                years old
+              </span>
+              <span class="ml-1" *ngIf="!editable && !profile.citizenship">
                 <i class="fa fa-fw fa-globe" aria-hidden="true"></i>
-                American
+                N/A
+              </span>
+              <span class="ml-1" *ngIf="!editable && profile.citizenship">
+                <i class="fa fa-fw fa-globe" aria-hidden="true"></i>
+                {{profile.citizenship}}
+              </span>
+              <span class="ml-1" *ngIf="editable">
+                <i class="fa fa-fw fa-globe" aria-hidden="true"></i>
+                <inline-editor type="text" [(ngModel)]="profile.citizenship" (onSave)="editField('citizenship', $event)" name="editCitizenship" placeholder="citizenship" size="30"></inline-editor>
               </span>
             </p>
           </div>
           <div class="buttons" *ngIf="editable">
-            <button class="btn btn-light" (click)="openModal(editSkill)">
+            <button class="btn btn-light" (click)="openModalSkill(editSkill)">
               <i class="fa fa-fw fa-certificate"></i>
               add skill
             </button>
@@ -105,7 +118,7 @@
       ...
       <div class="form-group row">
         <div class="col-sm-10 text-right">
-          <button type="submit" class="btn btn-secondary" (click)="d()">Cancel</button>
+          <button type="cancel" class="btn btn-secondary" (click)="d()">Cancel</button>
           <button type="submit" class="btn btn-warning">Add</button>
         </div>
       </div>
