--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<!-- <div class="header">
   <div class="container">
     <div class="row">
       <div class="col">
@@ -21,7 +21,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<template-header></template-header>
 
 <div class="main gradient-gold" id="top">
   <div class="container">
