feat: add message in chat via chatservice

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -27,9 +27,9 @@
           </div>
         </div>
         <div class="text-box">
-          <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+          <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
-              <textarea class="form-control" formControlName="content"></textarea>
+              <textarea class="form-control" formControlName="content" (keydown)="onKeySubmitted($event)" (keyup)="onClear()"></textarea>
               <button type="submit" class="btn btn-warning">Reply</button>
             </div>
           </form>
