--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -77,6 +77,7 @@
   border-bottom: solid 2px rgb(250,250,250);
   background-color: white;
   padding: 5px;
+  height: 75px;
   cursor: pointer;
   p.image {
     display: block;
@@ -131,6 +132,8 @@
       display: block;
       height: 55px;
       border-radius: 100%;
+      position: absolute;
+      top: 0;
     }
     .date {
       font-size: 0.8em;
@@ -141,10 +144,9 @@
 }
 
 .chatbox-left {
+  float: left;
   .line {
     img {
-      position: absolute;
-      top: 0;
       left: 0;
     }
     p.colored {
@@ -170,8 +172,6 @@
   .line {
     float: right;
     img {
-      position: absolute;
-      top: 0;
       right: 0;
     }
     p.colored {
